--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
-  font_url: "https://fonts.googleapis.com/css?family=BenchNine:300,400,700|Dorsa"
+  font_url: "https://fonts.googleapis.com/css?family=BenchNine:300,400,700|Dorsa";
+  font_url: "https://use.typekit.net/mxk0huy.css";
