Add missing letter

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ patternbot:
   rationales:
     typefaces.primary: |
       BenchNine was selected because it is a simple and clean looking sans-serif typeface that acts as a compliment to the more decorative display fonts.
-    typeface.secondary: |
+    typefaces.secondary: |
       Dorsa was selected for the headings of the website because it offers a thin and narrow type appearance, while also keeping true to the retro style.
-    typeface.tertriary: |
+    typefaces.tertriary: |
       Capitol was chosen as the tertriary font choice because of its retro appearance for accent elements such as buttons.
     colors.primary: |
       The primary colours are representative of the time period in which most of the items being sold in were popular.
