--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ theme: jekyll_patternbot
 patternbot:
   title: "The Retro"
   description: A small ecommerce website that sells retro electronics, apparel, music, and movie items.
-  font_url: "https://fonts.googleapis.com/css?family=BenchNine:300,400,700|Dorsa"
   font_url: "https://use.typekit.net/mxk0huy.css"
   colors:
     background: "--color-primary-light"
@@ -15,7 +14,7 @@ patternbot:
       BenchNine was selected because it is a simple and clean looking sans-serif typeface that acts as a compliment to the more decorative display fonts.
     typefaces.secondary: |
       Dorsa was selected for the headings of the website because it offers a thin and narrow type appearance, while also keeping true to the retro style.
-    typefaces.tertriary: |
+    typefaces.accent: |
       Capitol was chosen as the tertriary font choice because of its retro appearance for accent elements such as buttons.
     colors.primary: |
       The primary colours are representative of the time period in which most of the items being sold in were popular.
