Add styling to the homepage

--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -19,3 +19,8 @@ patterns:
     title: "Similar Products Card"
     description: |
       The "similar products" card is mostly used on any product details page. These are located at the bottom of the page, showcasing similar products to the currently viewed product. This card includes an image of the product and a "shop" button.
+  cards:
+    fields:
+      name: heading
+      type: string
+      example: "Retro Electronics"
