--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,12 @@ patternbot:
   layouts:
     default: |
       This default layout will be used for every page. It includes the header and footer.
+  collections:
+    products:
+      output: true
+
+  defaults:
+    - scope:
+        path: _products
+      values:
+        layout: product
