Add more elements

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ patternbot:
   layouts:
     default: |
       This default layout will be used for every page. It includes the header and footer.
+    product: |
+      This layout will be used for the [roduct listing page.
   collections:
     products:
       output: true
