--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -18,6 +18,12 @@ patterns:
     title: "Product Card"
     description: |
       The "product" card is used on the product list page. These cards include an image of the product, a decription/title underneath, and the price of the product.
+    fields:
+      - name: data
+        type: object
+        data:
+          source: "site.products[0]"
+          type: Product
   shop:
     title: "Shop Card"
     description: |
