--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -14,6 +14,9 @@ patterns:
       - name: image
         type: string
         example: "retro-radio.jpg"
+      - name: url
+        type: url
+        example: "/products/"
   product:
     title: "Product Card"
     description: |
