--- a/_patterns/sections/config.yml
+++ b/_patterns/sections/config.yml
@@ -22,6 +22,9 @@ patterns:
     description: |
       The "FAQ Section" is used for descriptive lists, such as frequently asked questions, or other informative sections on the website apart from the products.
     fields:
+      - name: heading
+        type: string
+        example: "Frequently Asked Questions"
       - name: title
         type: string
         example: "How long will it take for my order to ship?"
@@ -141,3 +144,14 @@ patterns:
       - name: image
         type: string
         example: "product-record-player.jpg"
+  content-paragraph:
+    title: "Content Paragraph"
+    description: |
+      The "Content Paragraph" section will be used to give users information on anything within the website.
+    fields:
+      - name: title
+        type: string
+        example: "Content"
+      - name: text
+        type: string
+        example: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
