--- a/_patterns/sections/config.yml
+++ b/_patterns/sections/config.yml
@@ -49,6 +49,24 @@ patterns:
       - name: text-4
         type: string
         example: "We encourage you to email us, or call us. We don't particularily have a preference!"
+      - name: title-5
+        type: string
+        example: "How much does shipping usually cost?"
+      - name: text-5
+        type: string
+        example: "Shipping domestically (Canada) will cost a flat rate of $5.00."
+      - name: title-6
+        type: string
+        example: "Am I able to return items?"
+      - name: text-6
+        type: string
+        example: "We offer refunds and exchanges upon the request of customers with reasonable justifications."
+      - name: title-7
+        type: string
+        example: "What's the best way to reach a customer service representative?"
+      - name: text-7
+        type: string
+        example: "We encourage you to email us, or call us. We don't particularily have a preference!"
   details:
     title: "Product Details Section"
     description: |
